--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./js.cookie.min.js"></script>
 
 
-    <script src="./global.js"></script>
+    <script src="global.js"></script>
 
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="global.css">
@@ -78,6 +78,18 @@
                     and the Alborz Mountains in the north, and the Zagros Mountains in the west. It also shares a short
                     border with the Republic of Azerbaijan in the northwest at the Nakhchivan exclave.
                 </p>
+                <h2>Pictures</h2>
+                <div class="image_container">
+                    <div class="img">
+                        <img class="home_img" src="images/home_one.jpg" alt="image">
+                        <div>Takht Jamishid</div>
+                    </div>
+                    <div class="img">
+                        <img class="home_img" src="images/home_two.jpg" alt="image">
+                        <div>Pasargad</div>
+                    </div>
+                </div>
+                <a class="blink cities_link" href="./cities.html">Click Here To See More Pictures</a>
                 <h2>List Of Cities</h2>
                 <table class="cities_table">
                     <thead>
