search and cities page added

--- a/cities.html
+++ b/cities.html
@@ -10,6 +10,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js.cookie.min.js"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+
 
     <script src="global.js"></script>
 
@@ -62,10 +68,123 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="cities.html">List Of Cities</a></li>
                         <li><a href="map.html">County Map</a></li>
+                        <li><a href="search.html">Search By Keywords</a></li>
                     </ul>
                 </div>
             </td>
-            <td style="text-align: center;"></td>
+            <td>
+                <!-- cards with grid view 4 * 4 -->
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-3 my-1">
+                            <div class="card w-100" style="width: 18rem;">
+                                <img style="object-fit: cover;" height="280px" src="images/isfahan.jpg"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Isfahan is a city in central Iran, known for its Persian
+                                        architecture.
+                                    <div class="text-center">
+                                        <a href="https://en.wikipedia.org/wiki/Isfahan_province" target="_blank"
+                                            class="blink">Lean More</a>
+                                    </div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 my-1">
+                            <div class="card w-100" style="width: 18rem;">
+                                <img src="images/kermanshah.jpg" style="object-fit: cover;" height="280px"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">This city is the most historical city in Iran. It is located in
+                                        the west of Iran.
+                                    <div class="text-center">
+                                        <a href="https://en.wikipedia.org/wiki/Kermanshah" target="_blank"
+                                            class="blink">Lean More</a>
+                                    </div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 my-1">
+                            <div class="card w-100" style="width: 18rem;">
+                                <img src="images/shiraz.jpg" height="280px" style="object-fit: cover;"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Shiraz is a city in southwestern Iran, known for its gardens and wine.
+                                    <div class="text-center">
+                                        <a href="https://en.wikipedia.org/wiki/Shiraz" target="_blank"
+                                            class="blink">Lean More</a>
+                                    </div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 my-1">
+                            <div class="card w-100" style="width: 18rem;">
+                                <img src="images/tehran.jpg" height="280px" style="object-fit: cover;"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Tehran is the capital of Iran and it is the largest city
+                                        in Iran and Western Asia.
+                                    <div class="text-center">
+                                        <a href="https://en.wikipedia.org/wiki/Tehran" target="_blank"
+                                            class="blink">Lean More</a>
+                                    </div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 my-1">
+                            <div class="card w-100" style="width: 18rem;">
+                                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 my-1">
+                            <div class="card w-100" style="width: 18rem;">
+                                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 my-1">
+                            <div class="card w-100" style="width: 18rem;">
+                                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3 my-1">
+                            <div class="card w-100" style="width: 18rem;">
+                                <img src="https://picsum.photos/200" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <a href="#" class="d-block text-center blink">
+                    Go to top
+                </a>
+
+            </td>
         </tr>
     </table>
 </body>
