--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js.cookie.min.js"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 
     <script src="global.js"></script>
 
@@ -62,6 +67,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="cities.html">List Of Cities</a></li>
                         <li><a href="map.html">County Map</a></li>
+                        <li><a href="search.html">Search By Keywords</a></li>
                     </ul>
                 </div>
             </td>
