all pages added

--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@
                         <img src="https://picsum.photos/100" alt="logo">
                     </div>
                     <div>
-                        <h1>List of cities</h1>
+                        <h1>Search By Keywords</h1>
                     </div>
                     <div>
                         <div id="login" style="display: none;">
@@ -67,11 +67,19 @@
                         <li><a href="cities.html">List Of Cities</a></li>
                         <li><a href="map.html">County Map</a></li>
                         <li><a href="search.html">Search By Keywords</a></li>
+                        <li class="text-muted">Login To See More</li>
+                        <li class="auth_item"><a href="form.html">Form</a></li>
+                        <li class="auth_item"><a href="references.html">References</a></li>
                     </ul>
                 </div>
             </td>
             <td>
                 <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <div class="col text-center">
+                            <h1>Search by keywords</h1>
+                        </div>
+                    </div>
                     <div class="row justify-content-center">
                         <div class="col-4">
                             <input id="search" type="text" class="form-control" placeholder="eg: tehran, ishafan, ...">
