--- a/cities.html
+++ b/cities.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="global.css">
 
     <link rel="stylesheet" href="cities.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 
 <body>
@@ -69,6 +70,9 @@
                         <li><a href="cities.html">List Of Cities</a></li>
                         <li><a href="map.html">County Map</a></li>
                         <li><a href="search.html">Search By Keywords</a></li>
+                        <li class="text-muted">Login To See More</li>
+                        <li class="auth_item"><a href="form.html">Form</a></li>
+                        <li class="auth_item"><a href="references.html">References</a></li>
                     </ul>
                 </div>
             </td>
