--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="global.css">
 
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 
 <body>
@@ -68,6 +69,9 @@
                         <li><a href="cities.html">List Of Cities</a></li>
                         <li><a href="map.html">County Map</a></li>
                         <li><a href="search.html">Search By Keywords</a></li>
+                        <li class="text-muted">Login To See More</li>
+                        <li class="auth_item"><a href="form.html">Form</a></li>
+                        <li class="auth_item"><a href="references.html">References</a></li>
                     </ul>
                 </div>
             </td>
