--- a/index.html
+++ b/index.html
@@ -76,92 +76,104 @@
                 </div>
             </td>
             <td style="text-align: center;">
-                <h2>Iran</h2>
-                <p>
-                    Iran, officially the Islamic Republic of Iran, is a country in Western Asia. With 82 million
-                    inhabitants, Iran is the world's 18th most populous country. It is the second-most populous
-                    Muslim-majority country (after Indonesia) and the ninth-most populous country in the world, covering
-                    a total area of 1,648,195 km2 (636,372 sq mi). Iran is bordered to the northwest by Armenia and the
-                    Republic of Azerbaijan, to the north by the Caspian Sea, to the northeast by Turkmenistan, to the
-                    east by Afghanistan and Pakistan, to the south by the Persian Gulf and the Gulf of Oman, and to the
-                    west by Turkey and Iraq. The country is separated from the rest of Asia by the Caucasus Mountains
-                    and the Alborz Mountains in the north, and the Zagros Mountains in the west. It also shares a short
-                    border with the Republic of Azerbaijan in the northwest at the Nakhchivan exclave.
-                </p>
-                <h2>Pictures</h2>
-                <div class="image_container">
-                    <div class="img">
-                        <img class="home_img" src="images/home_one.jpg" alt="image">
-                        <div>Takht Jamishid</div>
+                <div class="container">
+                    <h2>Iran</h2>
+                    <p>
+                        Iran, officially the Islamic Republic of Iran, is a country in Western Asia. With 82 million
+                        inhabitants, Iran is the world's 18th most populous country. It is the second-most populous
+                        Muslim-majority country (after Indonesia) and the ninth-most populous country in the world,
+                        covering
+                        a total area of 1,648,195 km2 (636,372 sq mi). Iran is bordered to the northwest by Armenia and
+                        the
+                        Republic of Azerbaijan, to the north by the Caspian Sea, to the northeast by Turkmenistan, to
+                        the
+                        east by Afghanistan and Pakistan, to the south by the Persian Gulf and the Gulf of Oman, and to
+                        the
+                        west by Turkey and Iraq. The country is separated from the rest of Asia by the Caucasus
+                        Mountains
+                        and the Alborz Mountains in the north, and the Zagros Mountains in the west. It also shares a
+                        short
+                        border with the Republic of Azerbaijan in the northwest at the Nakhchivan exclave.
+                    </p>
+                    <h2>Pictures</h2>
+                    <div class="image_container">
+                        <div class="img">
+                            <img class="home_img" src="images/home_one.jpg" alt="image">
+                            <div>Takht Jamishid</div>
+                        </div>
+                        <div class="img">
+                            <img class="home_img" src="images/home_two.jpg" alt="image">
+                            <div>Pasargad</div>
+                        </div>
                     </div>
-                    <div class="img">
-                        <img class="home_img" src="images/home_two.jpg" alt="image">
-                        <div>Pasargad</div>
+                    <a class="blink cities_link" href="./cities.html">Click Here To See More Pictures</a>
+                    <h2>List Of Cities</h2>
+                    <div class="row justify-content-center">
+                        <div class="col-10">
+                            <table class="cities_table mb-4">
+                                <thead>
+                                    <tr>
+                                        <th>City</th>
+                                        <th>Population</th>
+                                        <th>Province</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Tehran</td>
+                                        <td>8,700,000</td>
+                                        <td>Tehran</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Isfahan</td>
+                                        <td>2,700,000</td>
+                                        <td>Isfahan</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Shiraz</td>
+                                        <td>1,700,000</td>
+                                        <td>Fars</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mashhad</td>
+                                        <td>2,100,000</td>
+                                        <td>Khorasan Razavi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Tabriz</td>
+                                        <td>1,700,000</td>
+                                        <td>East Azerbaijan</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Yazd</td>
+                                        <td>1,100,000</td>
+                                        <td>Yazd</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Qom</td>
+                                        <td>1,100,000</td>
+                                        <td>Qom</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kermanshah</td>
+                                        <td>1,100,000</td>
+                                        <td>Kermanshah</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Urmia</td>
+                                        <td>1,100,000</td>
+                                        <td>West Azerbaijan</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Hamadan</td>
+                                        <td>1,100,000</td>
+                                        <td>Hamadan</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
-                <a class="blink cities_link" href="./cities.html">Click Here To See More Pictures</a>
-                <h2>List Of Cities</h2>
-                <table class="cities_table">
-                    <thead>
-                        <tr>
-                            <th>City</th>
-                            <th>Population</th>
-                            <th>Province</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Tehran</td>
-                            <td>8,700,000</td>
-                            <td>Tehran</td>
-                        </tr>
-                        <tr>
-                            <td>Isfahan</td>
-                            <td>2,700,000</td>
-                            <td>Isfahan</td>
-                        </tr>
-                        <tr>
-                            <td>Shiraz</td>
-                            <td>1,700,000</td>
-                            <td>Fars</td>
-                        </tr>
-                        <tr>
-                            <td>Mashhad</td>
-                            <td>2,100,000</td>
-                            <td>Khorasan Razavi</td>
-                        </tr>
-                        <tr>
-                            <td>Tabriz</td>
-                            <td>1,700,000</td>
-                            <td>East Azerbaijan</td>
-                        </tr>
-                        <tr>
-                            <td>Yazd</td>
-                            <td>1,100,000</td>
-                            <td>Yazd</td>
-                        </tr>
-                        <tr>
-                            <td>Qom</td>
-                            <td>1,100,000</td>
-                            <td>Qom</td>
-                        </tr>
-                        <tr>
-                            <td>Kermanshah</td>
-                            <td>1,100,000</td>
-                            <td>Kermanshah</td>
-                        </tr>
-                        <tr>
-                            <td>Urmia</td>
-                            <td>1,100,000</td>
-                            <td>West Azerbaijan</td>
-                        </tr>
-                        <tr>
-                            <td>Hamadan</td>
-                            <td>1,100,000</td>
-                            <td>Hamadan</td>
-                        </tr>
-                    </tbody>
-                </table>
             </td>
         </tr>
     </table>
