--- a/references.html
+++ b/references.html
@@ -148,6 +148,15 @@
                                             modern standards.
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td class="default_td">Lorem Picsum</td>
+                                        <td class="default_td">
+                                            <a href="https://picsum.photos/">https://picsum.photos/</a>
+                                        </td>
+                                        <td class="default_td">
+                                            Random image generator used to get logo on the top
+                                        </td>
+                                    </tr>
 
 
                                 </tbody>
