--- a/form.html
+++ b/form.html
@@ -247,11 +247,11 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="cities.html">List Of Cities</a></li>
-                        <li><a href="map.html">County Map</a></li>
+                        <li><a href="map.xhtml">County Map</a></li>
                         <li><a href="search.html">Search By Keywords</a></li>
                         <li class="text-muted">Login To See More</li>
                         <li class="auth_item"><a href="form.html">Form</a></li>
-                        <li class="auth_item"><a href="references.html">References</a></li>
+                        <li class="auth_item"><a href="references.xhtml">References</a></li>
                     </ul>
                 </div>
             </td>
